#17 Selenium と Geb を最新バージョンに上げた結果 gebTest タスク実行時に WARNING が出るようになったので --add-opens オプションでの指定を追加して WARNING が出なくなるようにしました